# poetry-workspaces-plugin

./: LICENSE  README.md  conftest.py  pyproject.toml
dev/: poetry.lock.bak  pyproject.toml
dev/unmanaged/package-2/: pyproject.toml
poetry_workspaces_plugin/: config.py  constants.py  context.py  factory.py  merge.py  plugin.py  poetry.py  pyproject.py  utils.py
poetry_workspaces_plugin/commands/: add.py  base.py  build.py  install.py  remove.py  workspace.py  workspaces_focus.py  workspaces_list.py
poetry_workspaces_plugin/commands/tests/: test_workspaces_list.py
testing/: todo.txt  utils.py
