
[project]
name = "dev"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.11,<4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-workspaces-plugin]
workspaces = ["packages/*"]

[[tool.poetry.source]]
name = "foo"
url = "https://pypi.org/simple"
priority = "supplemental"

[dependency-groups]
test = ["pytest (>=9.0.1,<10.0.0)", "pytest-mock (>=3.15.1,<4.0.0)"]
dev = ["ipython (>=9.7.0,<10.0.0)", "ipdb (>=0.13.13,<0.14.0)"]
